# padrino

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  prd-v2.md  prd-v3.md  prd.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: production-readiness.md
docs/deployment/: alert-rules.yml  byo-model.md  central-backend.md  credential-rotation.md  ingestion-threat-model.md  postgres-backup-restore.md  scheduled-gauntlets.md  self-host.md  v2-public.md
ralph/: AGENTS-v9-changes.md  PREP-v9-human-multiplayer.md  orchestrate.workflow.mjs  prd-v10-roles.json  prd-v12-fixes.json  prd-v12.json  prd-v13.json  prd-v9-fixes-2.json  prd-v9-fixes-3.json  prd-v9-fixes.json  prd-v9a.json  prd-v9b.json  prd.json  progress.txt  prompt.md  ralph-codex.sh  ralph.sh
ralph/archive/: prd-v4.json
scripts/: audit_git_history_for_secrets.sh  probe_deepinfra_gemma.py  probe_xiaomi_mimo.py  probe_zai_glm51.py  release.sh
src/padrino/: __init__.py  bootstrap.py  cli.py  demo_gauntlet.py  logging.py  settings.py  smoke.py
tests/: conftest.py  test_human_lane_compose.py  test_invariants_human_mp.py  test_settings.py  test_smoke.py
tests/analytics/: test_deterministic_core.py  test_deterministic_relational.py  test_human_stats.py  test_repository.py
tests/api/: __init__.py  test_admin_routes.py  test_auth.py  test_broadcast_moderation_enforced.py  test_composition_counts.py  test_consent_gate.py  test_endgame_reveal.py  test_game_analytics_materialized.py  test_game_routes.py  test_gauntlet_routes.py  test_guess_flow.py  test_guest_quickplay.py  test_health.py  test_healthz_human_lane.py  test_healthz_scheduler.py  test_human_action_channel.py  test_human_auth.py  test_human_chat_channel.py  test_human_match.py  test_human_rate_limit_peek_commit.py  test_human_request_state_cache.py  test_human_reveal.py  test_human_seat_auth.py  test_human_stats_route.py  test_ingestion.py  test_ingestion_abuse.py  test_leaderboard.py  test_lobby_admission.py  test_lobby_create.py  test_lobby_invite_presence.py  test_lobby_launch.py  test_lobby_launch_slot_lifecycle.py  test_oauth_signin.py  test_pagination.py  test_public_analytics.py  test_public_excludes_unverified.py  test_public_ladder.py  test_public_live_index.py  test_public_live_sse.py  test_public_live_tail_endpoint.py  (+9 more)
tests/cli/: __init__.py  test_bootstrap.py  test_demo_gauntlet.py  test_gauntlet_cli.py  test_human_lane_cli.py  test_logging_config.py  test_smoke_localhost.py
tests/core/: test_anonymity_property.py  test_bench10_constants.py  test_canonical_json.py  test_day_vote.py  test_deception13_constants.py  test_detective.py  test_doctor_protect.py  test_event_log.py  test_events.py  test_framer_variance_gate.py  test_hashing.py  test_identity_mode_composition.py  test_invariants.py  test_legal_actions.py  test_lobby_autofill.py  test_mafia_kill.py  test_mini7_constants.py  test_mode_aware_observation.py  test_night_action_resolution_matrix.py  test_night_resolution.py  test_ninja13_constants.py  test_no_wallclock.py  test_observation_builder.py  test_observation_privacy.py  test_observation_privacy_audit.py  test_pairing.py  test_phases.py  test_purity.py  test_rating_context_rulesets.py  test_reducer.py  test_replay.py  test_reveal_projection.py  test_rng.py  test_role_assignment.py  test_roleblock10_constants.py  test_scheduling.py  test_seat_takeover_event.py  test_seating.py  test_spectator_projection.py  test_state.py  (+5 more)
tests/db/: test_campaigns_repo.py  test_dialect_portability.py  test_event_persistence.py  test_game_claims.py  test_game_seat_human_occupant.py  test_human_chat_sidecar.py  test_human_runtime_defaults.py  test_human_seat_presence_upsert.py  test_migration_0045_dedup.py  test_migration_0047_rating_contexts.py  test_migration_0049_humans_included_ranked_index.py  test_migration_0050_hot_path_indexes.py  test_migration_0051_lobby_integrity_ack.py  test_migration_0052_game_leases.py  test_migration_0053_campaigns.py  test_migration_0054_budget_reservations.py  test_migration_0055_llm_call_pricing_basis.py  test_migrations.py  test_migrations_all_dialects.py  test_models.py  test_ratings_repo.py  test_repositories.py  (+4 more)
(+459 files in other folders)
