[project]
name = "padrino"
version = "0.1.0"
description = "Deterministic LLM benchmark and league engine for Mafia-style social deduction games."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Tommy Zhao", email = "dev@myascend.ai" }]
keywords = ["mafia", "werewolf", "llm", "benchmark", "social-deduction", "openskill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "litellm>=1.50",
    "openskill>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.6",
    "vcrpy>=8.1.1",
    "testcontainers>=4.7",
    "psycopg[binary]>=3.2",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/tommyyzhao/padrino"
Repository = "https://github.com/tommyyzhao/padrino"
Issues = "https://github.com/tommyyzhao/padrino/issues"

[project.scripts]
padrino = "padrino.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/padrino"]
# Bundle canonical prompt markdown alongside the package so `importlib.resources`
# can read them at runtime in installed wheels (US-052).
artifacts = ["src/padrino/llm/prompts/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "TID", # tidy-imports
    "C4",  # comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"src/padrino/db/migrations/**" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
plugins = ["pydantic.mypy"]
exclude = ["src/padrino/db/migrations/"]

[[tool.mypy.overrides]]
module = ["litellm.*", "openskill.*", "vcr.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests that hit real LLM providers (deselect with '-m \"not integration\"')",
    "slow: marks slow tests",
    "live_llm: marks recorded-cassette contract tests against real LLM providers (deselected by default; opt-in via '-m live_llm')",
    "postgres: marks tests that require a Docker daemon to spin up Postgres (skipped automatically without docker; opt-in via '-m postgres')",
]

[tool.coverage.run]
source = ["src/padrino"]
branch = true
omit = ["src/padrino/db/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

